<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"><b>Machinist Mate</b></string>
    <string name="title_item_detail">Item Detail</string>
    <string name="in">inch</string>
    <string name="ft">foot</string>
    <string name="yd">yard</string>
    <string name="mm">millimeter</string>
    <string name="cm">centimeter</string>
    <string name="m">meter</string>
    <string name="calculate"><b>Calculate</b></string>
    <string name="surface_standard">SFM</string>
    <string name="surface_metric">SMM</string>
    <string name="surfaceFeet">ft</string>
    <string name="surfaceMeters">m</string>
    <string name="speedView">Speed</string>
    <string name="feedPerToothView">Feed per Tooth</string>
    <string name="numberTeethView">Number of Teeth</string>
    <string name="standard"><b>Standard</b></string>
    <string name="metric"><b>Metric</b></string>
    <string name="fraction"><b>Fraction</b></string>
    <string name="rpm">RPM</string>
    <string name="ipm">IPM</string>
    <string name="mmpm">MMPM</string>
    <string name="input">Input</string>
    <string name="diameter">Diameter</string>
    <string name="precision">Max Precision</string>
    <string name="converto">convert to</string>
    <string name="opposite">(O)pposite</string>
    <string name="hypotenuse">(H)ypotenuse</string>
    <string name="adjacent">(A)djacent</string>
    <string name="base">Base(A)</string>
    <string name="height">Height(O)</string>
    <string name="or"><b>or</b></string>


    <string name="drill_size_chart"><b>Drill Size Chart</b></string>

        //Geometry Headings
    <string name="right_triangle_calc"><b>Right Triangle</b></string>
    <string name="oblique"><b>Oblique Triangle</b></string>
    <string name="square"><b>Square/Rectangle</b></string>
    <string name="circle"><b>Circle</b></string>
    <string name="trapezoid"><b>Trapezoid US/Trapezium UK</b></string>
    <string name="parallelogram"><b>Parallelogram</b></string>


    <string-array name="conversions_array">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Millimeter</item>
        <item>Centimeter</item>
        <item>Meter</item>
    </string-array>

    <string-array name="precision_array">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>

    <string-array name="rt_array">
        <item>Sine</item>
        <item>Inverse Sine</item>
        <item>Cosine</item>
        <item>Inverse Cosine</item>
        <item>Tangent</item>
        <item>Inverse Tangent</item>
        <item>Area</item>
        <item>Side H</item>
        <item>Side O</item>
        <item>Side A</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="degree_rad_array">
        <item>Degree</item>
        <item>Radian</item>
    </string-array>

    <string-array name="degree_rad_value_array">
        <item>Degree</item>
        <item>Radian</item>
        <item>Sides</item>
    </string-array>

    <string-array name="square_rect_choice_array">
        <item>Square</item>
        <item>Rectangle</item>
    </string-array>

    <string-array name="square_calc_array">
        <item>Area</item>
        <item>Diagonal</item>
        <item>Side</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="rect_calc_array">
        <item>Area</item>
        <item>Diagonal (d)</item>
        <item>Width (W)</item>
        <item>Length (L)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="circle_calc_array">
        <item>Radius (r)</item>
        <item>Diameter (d)</item>
        <item>Area</item>
        <item>Circumference (c)</item>
    </string-array>

    <string-array name="circle_radius_array">
        <item>Diameter</item>
        <item>Area</item>
        <item>Circumference</item>
    </string-array>

    <string-array name="para_calc_array">
        <item>Area</item>
        <item>Base (b)</item>
        <item>Height (h)</item>
        <item>Side (a)</item>
        <item>Perimeter</item>
        <item>Angle x</item>
        <item>Angle y</item>
    </string-array>

    <string-array name="trap_calc_array">
        <item>Area</item>
        <item>Base (a)</item>
        <item>Base (b)</item>
        <item>Side (c)</item>
        <item>Side (d)</item>
        <item>Height (h)</item>
        <item>Median (m)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="oblique_initial_calc_array">
        <item>Area</item>
        <item>Height</item>
        <item>Side (a)</item>
        <item>Side (c)</item>
        <item>Angle (x)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="oblique_asa_array">
        <item>Area</item>
        <item>Height</item>
        <item>Side (a)</item>
        <item>Side (c)</item>
        <item>Angle (z)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="oblique_sas_array">
        <item>Area</item>
        <item>Height</item>
        <item>Side (c)</item>
        <item>Angle (x)</item>
        <item>Angle (z)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="oblique_ass_array">
        <item>Area</item>
        <item>Height</item>
        <item>Side (c)</item>
        <item>Angle (y)</item>
        <item>Angle (z)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="oblique_sss_array">
        <item>Area</item>
        <item>Height</item>
        <item>Angle (x)</item>
        <item>Angle (y)</item>
        <item>Angle (z)</item>
        <item>Perimeter</item>
    </string-array>

    <string-array name="oblique_area_array">
        <item>AAS</item>
        <item>ASA</item>
        <item>SAS</item>
        <item>ASS</item>
        <item>SSS</item>
    </string-array>


</resources>
