<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    tools:context="com.jwilliams.machinistmate.app.SpeedsDetailActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:id="@+id/speed_answer_layout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/speed_answer"
            style="@style/AnswerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginRight="4dp"
            android:layout_weight="4"
            android:gravity="center"
            android:hint="@string/intHint" />

        <TextView
            android:id="@+id/speed_answer_type"
            style="@style/TypeStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:gravity="center|fill"
            android:text="@string/rpm" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/speed_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/speed_answer_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/speeds_standard_radio"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="4dp"
            android:checked="true"
            android:text="@string/standard" />

        <RadioButton
            android:id="@+id/speeds_metric_radio"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="4dp"
            android:text="@string/metric" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/speed_surface_layout"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:layout_below="@+id/speed_radio_group"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/surface_view"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/surface" />
        <EditText
            android:id="@+id/surfaceInput"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal"/>

        <TextView
            android:id="@+id/surface_type_view"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/surfaceFeet" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/diameter_view"
        android:layout_width="500dp"
        android:layout_height="48dp"
        android:layout_below="@+id/speed_surface_layout"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/diameter_text"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/diameter" />


        <EditText
            android:id="@+id/diameterInput"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:inputType="numberDecimal" />

        <TextView
            android:id="@+id/diameter_type_view"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/in" />
    </LinearLayout>

    <Button
        android:id="@+id/speed_calc"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/diameter_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/calculate" />

</RelativeLayout>