<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_detail_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#111111"
    tools:context="com.jwilliams.machinistmate.app.FeedsDetailActivity"
    tools:ignore="MergeRootFrame">

    <LinearLayout
        android:id="@+id/feed_answer_layout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/feed_answer"
            style="@style/AnswerStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginRight="4dp"
            android:layout_weight="4"
            android:gravity="center"
            android:singleLine="true" />

        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/feed_answer_type"
            style="@style/TypeStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="4dp"
            android:gravity="center|fill"
            android:padding="5dp" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/feed_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_answer_layout"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_margin="4dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/feeds_standard_radio"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginRight="4dp"
            android:checked="true"
            android:text="@string/standard" />

        <RadioButton
            android:id="@+id/feeds_metric_radio"
            style="@style/radioButtons"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginLeft="4dp"
            android:text="@string/metric" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/feed_speed_layout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_radio_group"
        android:layout_alignStart="@id/feed_answer_layout"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">


        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/feed_speed"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/speedView"
            android:layout_marginRight="4dp" />


        <EditText
            android:id="@+id/feed_speed_input"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".6"
            android:inputType="numberDecimal"
            android:layout_marginLeft="4dp" />

        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/feed_speed_type"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/rpm" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/feed_per_tooth_layout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_speed_layout"
        android:layout_alignStart="@id/feed_answer_layout"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">


        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/feed_per_tooth_view"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/feedPerToothView"
            android:layout_marginRight="4dp" />


        <EditText
            android:id="@+id/feed_per_tooth_input"
            style="@style/EditTextStyle"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight=".6"
            android:inputType="numberDecimal"
            android:layout_marginLeft="4dp" />

        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/feed_per_tooth_type"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/in" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_teeth_layout"
        android:layout_width="500dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feed_per_tooth_layout"
        android:layout_alignStart="@id/feed_answer_layout"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:orientation="horizontal">


        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:id="@+id/number_teeth_view"
            style="@style/TextViewStyle"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/numberTeethView"
            android:layout_marginRight="4dp" />


        <EditText
            android:id="@+id/number_teeth_input"
            style="@style/EditTextStyle"
            android:layout_width="75dp"
            android:layout_height="48dp"
            android:inputType="numberDecimal"
            android:gravity="bottom|right"
            android:layout_marginLeft="4dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="400dp"
        android:layout_height="48dp"
        android:layout_below="@+id/number_teeth_layout"
        android:id="@+id/feed_precision"
        android:layout_alignStart="@id/feed_answer_layout"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp">


        <com.jwilliams.machinistmate.app.AppContent.RobotoTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/precision"
            android:id="@+id/textView"
            style="@style/TextViewStyle"
            android:layout_marginRight="4dp"/>

        <Spinner
            android:layout_width="75dp"
            android:layout_height="match_parent"
            android:id="@+id/feed_prec_spinner"
            android:layout_marginLeft="4dp" />
    </LinearLayout>

    <Button
        android:id="@+id/feed_calc"
        style="@style/buttons"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_below="@+id/feed_precision"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/calculate"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RelativeLayout
        android:layout_width="320px"
        android:layout_height="50px"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/relativeLayout"></RelativeLayout>

    <RelativeLayout
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_above="@+id/relativeLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="4dp"
        android:layout_alignParentBottom="true"
        android:background="#1d1d1d"
        android:clickable="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="This is where an ad will go"
            android:id="@+id/textView2"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>

</RelativeLayout>